--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav a {
   color: white;
   text-decoration: none;
   font-size: 26px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   letter-spacing: 1px;
   padding: 2px 10px;
 }
@@ -36,5 +36,10 @@ nav a:hover {
   nav {
     flex-direction: column;
     height: auto;
+    bottom: 0;
+    top: auto;
+  }
+  body {
+    padding-top: 0px;
   }
 }
