--- a/style.css
+++ b/style.css
@@ -7,17 +7,20 @@ body {
   padding-top: 60px;
 }
 
-#menu {
+#menu,
+#menulabel {
   display: none;
 }
-
 nav {
   background-color: rgb(0, 0, 0);
   text-align: center;
+  /* A menü fix magasságának beállítása */
   height: 60px;
+  /* flex display, a könnyebb kezelhetőségért, irány és vertikális középre igazítás*/
   display: var(--menu-display);
   align-items: center;
   justify-content: center;
+  /* A menü a helyén marad */
   position: fixed;
   top: 0;
   width: 100%;
@@ -38,10 +41,8 @@ nav a:hover {
 
 #menulabel {
   cursor: pointer;
-  display: none;
-  position: fixed;
-  font-size: 20px;
 }
+
 
 @media screen and (max-width: 600px) {
   :root {
@@ -53,19 +54,25 @@ nav a:hover {
   nav {
     flex-direction: column;
     height: auto;
-    bottom: 0;
+    bottom: 40px;
     top: auto;
   }
   body {
     padding-top: 0px;
+    padding-bottom: 40px;
   }
   #menulabel {
+    position: fixed;
+    bottom: 0;
     display: flex;
-    flex-direction: column;
-    height: auto;
-    bottom: 91px;
-    top: auto;
-    background-color: white;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    font-size: 30px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    
   }
 }
 
