--- a/style.css
+++ b/style.css
@@ -5,14 +5,24 @@
 body {
   margin: 0;
   padding-top: 60px;
+  background-color: rgb(0, 0, 0);
 }
 
 #menu,
 #menulabel {
   display: none;
 }
+
+h1 {
+  color: white;
+}
+
+p {
+  color: white;
+}
+
 nav {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(59, 59, 59);
   text-align: center;
   /* A menü fix magasságának beállítása */
   height: 60px;
@@ -43,7 +53,6 @@ nav a:hover {
   cursor: pointer;
 }
 
-
 @media screen and (max-width: 600px) {
   :root {
     --menu-display: none;
@@ -66,13 +75,12 @@ nav a:hover {
     bottom: 0;
     display: flex;
     width: 100%;
-    background-color: #000;
+    background-color: rgb(78, 77, 77);
     color: #fff;
     font-size: 30px;
     height: 40px;
     align-items: center;
     justify-content: center;
-    
   }
 }
 
