--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
 }
 
 nav a {
-  color: white;
+  color: #9290c3;
   text-decoration: none;
   font-size: 26px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
