--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav a:hover {
 
 @media screen and (max-width: 600px) {
   :root {
-    --menu-display: none;
+    --bottom-menu-button: -50px;
   }
   nav a {
     font-size: 22px;
@@ -63,8 +63,9 @@ nav a:hover {
   nav {
     flex-direction: column;
     height: auto;
-    bottom: 40px;
+    bottom: var(--bottom-menu-button);
     top: auto;
+    transition: bottom 0.4s ease;
   }
   body {
     padding-top: 0px;
@@ -85,5 +86,5 @@ nav a:hover {
 }
 
 body:has(#menu:checked) {
-  --menu-display: flex;
+  --bottom-menu-button: 40px;
 }
