js-el kepek hozzáadva a gallery2-höz

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p {
   height: 700px;
 }
 
-#container {
+#kepgallery {
   display: flex;
   align-items: center;
   color: #9290c3;
@@ -33,6 +33,7 @@ p {
 #container div {
   padding: 5px;
 }
+
 a {
   color: #9290c3;
   text-decoration: none;
